Criando teste de integração
